# raytracing-demo

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: AlignedBox.h.C4A5DE83ED6F8D94.idx  AmbiVector.h.26336F6FDA0FD33A.idx  Amd.h.F454A073A83F43CA.idx  AngleAxis.h.55EEB280FD4514DD.idx  ArithmeticSequence.h.5E8CA03E10953357.idx  Array.h.0CC56A875EE7EC20.idx  ArrayBase.h.5D3B39489746F81A.idx  ArrayCwiseBinaryOps.h.FBA122D048CF09A1.idx  ArrayCwiseUnaryOps.h.8246F3C2243FABB0.idx  ArrayWrapper.h.45A4AD27877EA01A.idx  Assign.h.36A7EF48BEC29E59.idx  AssignEvaluator.h.F14F6750C9E3BBF3.idx  AssignmentFunctors.h.CDDE2B238B0AC96A.idx  BDCSVD.h.DCF01D104A6C3EC4.idx  BFloat16.h.0A8461C51F16BFF1.idx  BandMatrix.h.204D1FFBEC5B8E7C.idx  BasicPreconditioners.h.ED4BA7746756C534.idx  BiCGSTAB.h.71A358554F85E032.idx  BinaryFunctors.h.9A0BC451444EFA77.idx  BlasUtil.h.283074CE32CEE66A.idx  Block.h.72FF26B2B71ECCF1.idx  BlockHouseholder.h.29F6540FC2C1B34E.idx  BlockMethods.h.46095AEE7675CC82.idx  BooleanRedux.h.7A01CA67A4DC8146.idx  Cholesky.1099AE0928F3AB2A.idx  (+235 more)
Ray_tracing_DEMO/: Hello_World.cpp  Makefile  camera.h  color.h  config.h  get_color.h  hitable.h  hitable_list.h  image.ppm  include.h  main  main.cpp  material.h  moving_sphere.h  normal_demo.cpp  output.h  ray.h  sphere.h  testout.ppm  vec3.h
include/: camera.hpp  config.hpp  hit_record.hpp  hittable_objects.hpp  img.hpp  material.hpp  ray.hpp  utility.hpp
src/: Sphere.cpp  camera.cpp  get_color.cpp  hittable_objects.cpp  hittable_objects_basic.cpp  img.cpp  main.cpp  material.cpp  ray.cpp  utility.cpp
